pkg/objects/EmployeeLanguage__c.object
<CustomObject>
    <description>Objeto responsável por gerenciar idiomas do funcionário.</description>
    <fields>
        <fullName>Employee__c</fullName>
        <description>Relacionamento mestre detalhe objeto-funcionário.</description>
        <inlineHelpText>Nome do funcionário</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Language</relationshipLabel>
        <relationshipName>EmployeeLanguage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KnowledgeLevel__c</fullName>
        <description>Campo para registrar o nível de conhecimento de idioma.</description>
        <inlineHelpText>Nível de conhecimento do idioma</inlineHelpText>
        <label>Knowledge Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Básico</fullName>
                </value>
                <value>
                    <fullName>Intermediário</fullName>
                </value>
                <value>
                    <fullName>Avançado</fullName>
                </value>
                <value>
                    <fullName>Fluente</fullName>
                </value>
                <value>
                    <fullName>Nativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Campo de lista de opções para registrar os idiomas dos funcionários.</description>
        <inlineHelpText>Idiomas dos funcionários</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Espanhol</fullName>
                </value>
                <value>
                    <fullName>Inglês</fullName>
                </value>
                <value>
                    <fullName>Português</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherReference__c</fullName>
        <description>Campo de preenchimento obrigatório caso o campo referência seja preenchido com o &quot;Outras&quot;.</description>
        <inlineHelpText>Outras referencias que não estão na lista.</inlineHelpText>
        <label>Other Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReferenceNote__c</fullName>
        <description>Campo para registrar a nota de referência do idioma do funcionário.</description>
        <inlineHelpText>Nota de referência do idioma do funcionário.</inlineHelpText>
        <label>Reference Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReferenceScore__c</fullName>
        <description>Campo para registrar a pontuação de referência do funcionário.</description>
        <inlineHelpText>Pontuação de referência do funcionário.</inlineHelpText>
        <label>Reference Score</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Campo de registro da referência da nota e pontuação.</description>
        <inlineHelpText>Referência da nota e pontuação.</inlineHelpText>
        <label>Reference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOEIC</fullName>
                </value>
                <value>
                    <fullName>Outras</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee Language</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Language Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Language</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VerificacaoReferencia</fullName>
        <active>true</active>
        <description>Regra de validação para o preenchimento obrigatório do campo outras referencias.</description>
        <errorConditionFormula>AND(ISPICKVAL(Reference__c, &quot;Outras&quot;),
ISBLANK(OtherReference__c))</errorConditionFormula>
        <errorDisplayField>OtherReference__c</errorDisplayField>
        <errorMessage>Preenchimento obrigatório.</errorMessage>
    </validationRules>
</CustomObject>